syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.service.core";
option java_outer_classname = "CoreServiceProto";

package core;

// The core service definition.
service CoreService {
    rpc InitInTx (InitInTxRequest) returns (Empty) {
    }
    rpc InitOutTx (Request) returns (Empty) {
    }
    rpc FinishProcess (Request) returns (Empty) {
    }
    rpc CompleteTx (TxRequest) returns (Empty) {
    }
}

message Request {
    string processId = 1;
    string txHash = 2;
}

message TxRequest {
    string txHash = 1;
    string blockchainType = 2;
}

message InitInTxRequest {
    string txHash = 1;
    string blockchainType = 2;
    string address = 3;
}

message Empty {
}